--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<br/>
 
 				Tenha <span>ambientes limpos</span> e bem decorados, transmitindo <strong>elegância 
-				e finesse</strong> para todo aquele que estiver ali...
+				e finesse</strong> para todo aquele que estiver ali.
 			</p>
 
 			</div>
